<resources>
    <string name="app_name">DailyBook</string>
    <string name="pin">Pin</string>
    <string name="confirm">confirm</string>
    <string name="forgot_pin_reset_here">Forgot Pin? Reset Here</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="save">SAVE</string>
    <string name="long_text">This is an app for the #7DaysOfCodeChallenge but Andela for the Android Developer Course in the ALC3.0 Google Scholarship Program.</string>
    <string name="change_pin">Change Pin</string>
    <string name="exit">Exit</string>
    <string name="about">About Me</string>
    <string name="too_short_error">Please Input at least 4 Characters</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="new_member_register_here">New member? Register Here</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="sign_out">Sign Out</string>
</resources>
