<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorGreen"
        android:id="@+id/change_pin"
        android:text="@string/change_pin"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:drawableStart="@drawable/ic_settings"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#14abbf"
        android:id="@+id/about_me"
        android:text="@string/about"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_pin"
        android:drawableStart="@drawable/ic_help"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#bf1447"
        android:id="@+id/close_app"
        android:text="@string/exit"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="5dp"
        android:drawableStart="@drawable/ic_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>